# kbd-layout-sync

./: CMakeLists.txt  LICENSE  config.h.in  kbd-layout-sync.desktop
src/: CMakeLists.txt  kbd-layout-sync.qrc  listener.cpp  listener.h  main.cpp  sender.cpp  sender.h  settings.cpp  settings.h  settings_window.cpp  settings_window.h  status.h  worker.cpp  worker.h  xkb_switch_lib.cpp  xkb_switch_lib.h
